--- a/docker-images/kafka-based/kafka/Makefile
+++ b/docker-images/kafka-based/kafka/Makefile
@@ -5,6 +5,7 @@ include ../../../Makefile.docker
 
 kafka_agent_dist := ../../artifacts/binaries/kafka-agent-$(RELEASE_VERSION)-dist.zip
 tracing_agent_dist := ../../artifacts/binaries/tracing-agent-$(RELEASE_VERSION)-dist.zip
+cruise_control_notifier_dist := ../../artifacts/binaries/cruise-control-notifier-$(RELEASE_VERSION)-dist.zip
 
 clean:
 	rm -rf tmp
@@ -21,6 +22,12 @@ clean:
 	unzip -qoj $(tracing_agent_dist) lib/io.strimzi.tracing-agent-$(RELEASE_VERSION).jar -d tmp/
 	mv tmp/io.strimzi.tracing-agent-$(RELEASE_VERSION).jar tmp/tracing-agent-$(RELEASE_VERSION).jar
 	touch .tracing-agent.tmp
+
+.cruise-control-notifier.tmp: $(cruise_control_notifier_dist)
+	test -d tmp || mkdir tmp
+	unzip -qoj $(cruise_control_notifier_dist) -d tmp/cc-notifier
+	mv tmp/cc-notifier/io.strimzi.cruise-control-notifier-$(RELEASE_VERSION).jar tmp/cc-notifier/cruise-control-notifier-$(RELEASE_VERSION).jar
+	touch .cruise-control-notifier.tmp
 
 .thirdparty-libs-$(THIRD_PARTY_LIBS).tmp: ../../artifacts/binaries/kafka-thirdparty-libs/$(THIRD_PARTY_LIBS).zip
 	test -d tmp/thirdparty-libs-$(THIRD_PARTY_LIBS) || mkdir -p tmp/thirdparty-libs-$(THIRD_PARTY_LIBS)
@@ -42,7 +49,7 @@ clean:
 	cp ../../artifacts/binaries/kafka/$(KAFKA_VERSION).ignorelist tmp/$(KAFKA_VERSION).ignorelist
 	touch .kafka-$(KAFKA_VERSION)-ignorelist.tmp
 
-docker_build: .kafka-agent.tmp .tracing-agent.tmp .thirdparty-libs-$(THIRD_PARTY_LIBS).tmp .thirdparty-libs-cc.tmp .kafka-$(KAFKA_VERSION).tmp .kafka-$(KAFKA_VERSION)-ignorelist.tmp docker_build_default
+docker_build: .cruise-control-notifier.tmp .kafka-agent.tmp .tracing-agent.tmp .thirdparty-libs-$(THIRD_PARTY_LIBS).tmp .thirdparty-libs-cc.tmp .kafka-$(KAFKA_VERSION).tmp .kafka-$(KAFKA_VERSION)-ignorelist.tmp docker_build_default
 	# Pull dependencies first
 
 docker_build:
