--- a/api/pom.xml
+++ b/api/pom.xml
@@ -178,6 +178,7 @@
                                 <argument>io.strimzi.api.kafka.model.rebalance.KafkaRebalance=${project.basedir}${file.separator}..${file.separator}packaging${file.separator}install${file.separator}cluster-operator${file.separator}049-Crd-kafkarebalance.yaml</argument>
                                 <argument>io.strimzi.api.kafka.model.podset.StrimziPodSet=${project.basedir}${file.separator}..${file.separator}packaging${file.separator}install${file.separator}cluster-operator${file.separator}042-Crd-strimzipodset.yaml</argument>
                                 <argument>io.strimzi.api.kafka.model.nodepool.KafkaNodePool=${project.basedir}${file.separator}..${file.separator}packaging${file.separator}install${file.separator}cluster-operator${file.separator}045-Crd-kafkanodepool.yaml</argument>
+                                <argument>io.strimzi.api.kafka.model.rebalance.KafkaAnomaly=${project.basedir}${file.separator}..${file.separator}packaging${file.separator}install${file.separator}cluster-operator${file.separator}04B-Crd-kafkaanomaly.yaml</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -236,6 +237,7 @@
                                 <argument>io.strimzi.api.kafka.model.rebalance.KafkaRebalance</argument>
                                 <argument>io.strimzi.api.kafka.model.nodepool.KafkaNodePool</argument>
                                 <argument>io.strimzi.api.kafka.model.podset.StrimziPodSet</argument>
+                                <argument>io.strimzi.api.kafka.model.rebalance.KafkaAnomaly</argument>
                             </arguments>
                             <workingDirectory>${project.basedir}${file.separator}..${file.separator}documentation</workingDirectory>
                         </configuration>
