--- a/cruise-control-notifier/pom.xml
+++ b/cruise-control-notifier/pom.xml
@@ -42,6 +42,10 @@
             <version>0.45.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
         </dependency>
