Added KafkaAnomalyAssemblyOperator to handle an anomaly from the operator side
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/023-ClusterRole-strimzi-cluster-operator-role.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/023-ClusterRole-strimzi-cluster-operator-role.yaml
@@ -33,6 +33,7 @@ rules:
   - kafkabridges
   - kafkamirrormaker2s
   - kafkarebalances
+  - kafkaanomalies
   verbs:
   - get
   - list
@@ -51,6 +52,7 @@ rules:
   - kafkabridges/status
   - kafkamirrormaker2s/status
   - kafkarebalances/status
+  - kafkaanomalies/status
   verbs:
   - get
   - patch
