--- a/packaging/install/cluster-operator/04B-Crd-kafkaanomaly.yaml
+++ b/packaging/install/cluster-operator/04B-Crd-kafkaanomaly.yaml
@@ -46,6 +46,10 @@ spec:
       description: Action result
       jsonPath: .spec.action
       type: string
+    - name: Status
+      description: Status progress
+      jsonPath: .status.progress
+      type: string
     schema:
       openAPIV3Schema:
         type: object
@@ -73,6 +77,9 @@ spec:
               selfHealingStartTime:
                 type: integer
                 description: SelfHealingStartTime.
+              details:
+                type: string
+                description: Details.
               action:
                 type: string
                 description: Action.
