--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -4965,6 +4965,15 @@ spec:
                             type: array
                             items:
                               type: integer
+                controllers:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      directoryId:
+                        type: string
           required:
             - spec
     - name: v1beta2
@@ -12706,3 +12715,12 @@ spec:
                             type: array
                             items:
                               type: integer
+                controllers:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      directoryId:
+                        type: string
